<resources>
    <string name="app_name">TravelersTrack</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="header">Title</string>
    <string name="description">Description</string>
    <string name="edit_title">Enter Task Title</string>
    <string name="edit_description">Enter Task Description</string>
    <string name="edit_order">Enter Task Order (optional)</string>
    <string name="add_task">Add Task</string>
    <string name="add_location">Search a Location (optional)</string>
    <string name="add_task_required">Task title and description required</string>
    <string name="task_widget_error">Task not selected</string>
    <string name="delete_message">Are you sure you want to delete this task?</string>
    <string name="delete_title">Delete Task</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
